<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wood_rules">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/textrules"
        android:textSize="20sp"
        android:textColor="@color/black"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rules"
        android:contentDescription="@string/rules" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backToMainMenu"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/back"/>


</LinearLayout>
