<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/wood_basic">

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/volume"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/volOnOff"
            android:layout_marginStart="25dp"
            android:checked="true"
            />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:text="@string/field_size"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="0dp">

        </Spinner>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:text="@string/difficulty"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            />

    </TableRow>

        <Button
            android:id="@+id/backToMainMenu"
            android:layout_marginTop="25dp"
            android:text="@string/back"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/deep_blue"
            />

    </TableLayout>

