<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foxliss.fifteen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wood_basic"
        >

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/deep_blue"
        />

    <TextView
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/deep_blue"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/best_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/deep_blue"
        />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/deep_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/deep_blue"
        />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_marginTop="45dp"
            android:layout_gravity="center">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>