<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wood_basic"
    tools:context="com.foxliss.fifteen.BestScores">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/list1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            />

        <ListView
            android:id="@+id/list2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:backgroundTint="@color/deep_blue"
        />

    <Button
        android:id="@+id/clear_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_scores"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/deep_blue"
        />


    </LinearLayout>

</LinearLayout>