<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wood_basic"
    tools:context="com.foxliss.fifteen.BestScores">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_scores"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <Spinner
            android:id="@+id/sizeIdSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/list1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isScrollContainer="false"
            />

        <ListView
            android:id="@+id/list2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isScrollContainer="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/back_from_best_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_scores"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

</LinearLayout>